[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/EmoteScripts/EmoteBubble.gd" type="Script" id=1]
[ext_resource path="res://ArtAssets/ItemIcons/Chemical.png" type="Texture" id=2]
[ext_resource path="res://ArtAssets/IndicatorBubble/IB4-8.png" type="Texture" id=3]
[ext_resource path="res://ArtAssets/IndicatorBubble/IB2-10.png" type="Texture" id=4]
[ext_resource path="res://ArtAssets/IndicatorBubble/IB3-5-7-9.png" type="Texture" id=5]
[ext_resource path="res://ArtAssets/IndicatorBubble/IB6.png" type="Texture" id=6]
[ext_resource path="res://ArtAssets/IndicatorBubble/IB1-11.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": false,
"name": "close",
"speed": 24.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": false,
"name": "open",
"speed": 24.0
} ]

[node name="EmoteBubble" type="AnimatedSprite"]
scale = Vector2( 0.66, 0.66 )
z_index = 2
frames = SubResource( 4 )
script = ExtResource( 1 )

[node name="PanelContainer" type="AspectRatioContainer" parent="."]
margin_left = -212.0
margin_top = -266.0
margin_right = 402.0
margin_bottom = 348.0
rect_scale = Vector2( 0.66, 0.66 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
margin_right = 614.0
margin_bottom = 614.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VisibleTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="OpenTimer" type="Timer" parent="."]
one_shot = true
